# template-modern-cpp

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
src/: CMakeLists.txt
src/build-info/: .gitignore  CMakeLists.txt  build-info.h.in
src/example-lib/: CMakeLists.txt  fizzbuzz.cpp  fizzbuzz.h
src/main/: CMakeLists.txt  main.cpp
src/print/: CMakeLists.txt  pprint.cpp  pprint.h
test/: CMakeLists.txt
test/example-lib/: CMakeLists.txt  test_fizzbuzz.cpp
test/other/: CMakeLists.txt  other_test.cpp
test/other/specfic/: test_nested2.cpp
test/print/: test_print.cpp
tools/: .clang-format  .clang-tidy  .cmake-format.cfg  CMakeLists.txt  Dockerfile  Doxyfile.in
tools/cmake/build-targets/: application.cmake  clang-format.cmake  clang-tidy.cmake  cmake-format.cmake  cmake-lint.cmake  code-docs.cmake  cppcheck.cmake  gtest.cmake  python-script.cmake  unittest-coverage.cmake
tools/cmake/external_libs/: spdlog.cmake
tools/cmake/other/: compiler-flags-buildtype.cmake  compiler-flags-coverage.cmake  compiler-flags-warnings.cmake  create-python-script-target.cmake  find-tool.cmake  interprocedural-optimization.cmake  sanitizers.cmake
tools/scripts/: detect-dependencies.py  example.py  find-todos.py
tools/scripts/utils/: utils.py
